--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -12,6 +12,8 @@ header{
 	justify-content: space-around;
 	flex-wrap: wrap;
 	background-color: whitesmoke;
+	-webkit-box-shadow: 0px 16px 15px -6px #000000; 
+box-shadow: 0px 16px 15px -6px #000000;
 }
 .menu{
 display: contents;
@@ -38,6 +40,7 @@ a{
 	text-decoration: none;
 
 }
+
 .contenido{
 	display: flex;
 	justify-content: center;
@@ -96,6 +99,13 @@ a{
 }
 table{
 	border-collapse: collapse;
+	
+	
+	
+}
+.tablita{
+	overflow-x: auto;
+
 }
 th{
 	background-color: black;
@@ -103,9 +113,31 @@ th{
 }
 td,th{
 	border:1px solid black;
+	width: 15%;
 	padding: 0.5 rem;
+	text-align: center;
 }
 table img{
+	width: 100%;
+	height: 105%;
+	margin: 0px;
+	padding: 0px;
+}
+tr td:last-child{
+	padding: 0px;
+	margin: 0px;
+	vertical-align: ;
+}
+tbody tr:nth-child(2n){
+	background-color: aliceblue;
+}
+article{
+	display: flex;
+}
+figure{
+	border: 1px solid black;
+	max-width: 20%;
+}
+figure img{
 	max-width: 100%;
-	max-height: 100%;
 }
