--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -1,5 +1,8 @@
 body{
-	margin: 0px;
+	margin-top: 0px;
+	margin-left: 5px;
+	margin-right: 5px;
+
 }
 .imagen img{
 	max-width: 100%;
@@ -12,8 +15,9 @@ header{
 	justify-content: space-around;
 	flex-wrap: wrap;
 	background-color: whitesmoke;
-	-webkit-box-shadow: 0px 16px 15px -6px #000000; 
-box-shadow: 0px 16px 15px -6px #000000;
+	-webkit-box-shadow: 0px 16px 15px -6px #000000;
+	width: 100%; 
+	box-shadow: 0px 16px 15px -6px #000000;
 }
 .menu{
 display: contents;
@@ -102,10 +106,11 @@ table{
 	
 	
 	
+	
 }
 .tablita{
+	display: block;
 	overflow-x: auto;
-
 }
 th{
 	background-color: black;
@@ -119,7 +124,6 @@ td,th{
 }
 table img{
 	width: 100%;
-	height: 105%;
 	margin: 0px;
 	padding: 0px;
 }
@@ -137,7 +141,19 @@ article{
 figure{
 	border: 1px solid black;
 	max-width: 20%;
+	background-color: antiquewhite;
+	padding: 0.5rem;
 }
 figure img{
 	max-width: 100%;
+	
+}
+details figure{
+	width: 30%;
+}
+.mastinelespañolito figure{
+	width: 35%;
+}
+.articulos{
+	margin: auto;
 }
