--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -2,6 +2,7 @@ body{
 	margin-top: 0px;
 	margin-left: 5px;
 	margin-right: 5px;
+	background-color: #f2f1ef;
 
 }
 .imagen img{
@@ -14,10 +15,10 @@ header{
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
-	background-color: whitesmoke;
-	-webkit-box-shadow: 0px 16px 15px -6px #000000;
+	background-color: #f2f1ef;
+	-webkit-box-shadow: 0px 16px 15px -6px #683648;
 	width: 100%; 
-	box-shadow: 0px 16px 15px -6px #000000;
+	box-shadow: 0px 16px 15px -6px #683648;
 }
 .menu{
 display: contents;
@@ -35,16 +36,24 @@ nav form{
 }
 form button{
 	min-width: 100%;
+	font-family: 'Yellowtail', cursive;
 }
 .forminput label, input{
+	font-family: 'Yellowtail', cursive;	
 	margin: 2px;
 }
 a{
 	margin-top: 2rem ;
 	text-decoration: none;
+	font-family: 'Yellowtail', cursive;	
+	font-weight: bold;
+	color: #683648;
 
 }
-
+h2{
+	font-family: 'Yellowtail', cursive;
+	color: #683648;
+}
 .contenido{
 	display: flex;
 	justify-content: center;
@@ -61,9 +70,12 @@ a{
 }
 .contenido p{
 	background-color: black;
-	color: whitesmoke;
+	color: #a37c82;
 	margin-top: 0px;
 	text-align: center;
+	font-family: 'Yellowtail', cursive;
+	
+	
 }
 .Dogo img{
 	min-height: 91%;
@@ -103,10 +115,6 @@ a{
 }
 table{
 	border-collapse: collapse;
-	
-	
-	
-	
 }
 .tablita{
 	display: block;
@@ -114,7 +122,13 @@ table{
 }
 th{
 	background-color: black;
-	color: blanchedalmond;
+	color: #a37c82;
+	font-family: 'Yellowtail', cursive;
+	font-size: large;	
+}
+td{
+	font-family: 'Montserrat', sans-serif;
+
 }
 td,th{
 	border:1px solid black;
@@ -133,7 +147,7 @@ tr td:last-child{
 	vertical-align: ;
 }
 tbody tr:nth-child(2n){
-	background-color: aliceblue;
+	background-color: #a37c82;
 }
 article{
 	display: flex;
@@ -141,7 +155,7 @@ article{
 figure{
 	border: 1px solid black;
 	max-width: 20%;
-	background-color: antiquewhite;
+	background-color: #a37c82;
 	padding: 0.5rem;
 }
 figure img{
@@ -154,6 +168,13 @@ details figure{
 .mastinelespañolito figure{
 	width: 35%;
 }
-.articulos{
-	margin: auto;
+
+summary{
+	font-family: 'Yellowtail', cursive;	
+	cursor: pointer;
+	color: #a37c82;
+}
+details p{
+	font-family: 'Montserrat', sans-serif;
+
 }
